logs/yadapy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yadapy'...
Listing './lib/python3.5/site-packages/yadapy/api'...
Listing './lib/python3.5/site-packages/yadapy/db'...
Listing './lib/python3.5/site-packages/yadapy/db/mongodb'...
Listing './lib/python3.5/site-packages/yadapy/db/mongodb/lib'...
Listing './lib/python3.5/site-packages/yadapy/db/sqlite'...
Listing './lib/python3.5/site-packages/yadapy/lib'...
Compiling './lib/python3.5/site-packages/yadapy/node.py'...
***   File "./lib/python3.5/site-packages/yadapy/node.py", line 766
    print 'update made to dict %s to %s' %(internal['modified'],inbound['modified'])
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yadapy/nodecommunicator.py'...
***   File "./lib/python3.5/site-packages/yadapy/nodecommunicator.py", line 160
    print "Friend does not auto approve friend requests. There was no response from friend request."
                                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yadapy-0.1.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
